tests/neg-custom-args/captures/cc-dep-param.check
-- Error: tests/neg-custom-args/captures/cc-dep-param.scala:8:6 --------------------------------------------------------
8 |  foo(a, useA) // error: separation failure
  |      ^
  |      Separation failure: argument of type (a : Foo[Int]^) to capture-polymorphic parameter
  |      of type Foo[Int]^ captures {a}, and this capability is also passed separately to method foo.
